--- a/exercicios/exerc_repeticao/index.html
+++ b/exercicios/exerc_repeticao/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="exerc_03.js"></script>
 </body>
 </html>
