--- a/exercicios/exerc_repeticao/index.html
+++ b/exercicios/exerc_repeticao/index.html
@@ -6,10 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .sinicial{background-color: black;color: white;}
+        .s2006{ background-color: blueviolet;color:black;}
+        .s2007{background-color: aquamarine; color: black;}
+        .s2008{background-color: cadetblue; color: black;}
+        .s2009{background-color: darkcyan;color: black;}
+        .s20010{background-color: violet;color: black;}
+    </style>
 </head>
 
 <body>
-    <script src="exerc_05.js"></script>
+    <script src="exerc_08.js"></script>
 </body>
 
 </html>
