--- a/estrutura_dados_vetor/index.html
+++ b/estrutura_dados_vetor/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exemplo.js"></script>
+    <script src="att02.js"></script>
 </body>
 </html>
